--- a/roles/docker-openldap/tasks/main.yml
+++ b/roles/docker-openldap/tasks/main.yml
@@ -167,12 +167,12 @@
 # *****************************************************************************
 # Set the LDAP passwords
 
-# - name: wait for LDAP to start
-#   wait_for:
-#     delay: 5
-#     host: '{{ openldap_ip_addr }}'
-#     port: 389
-#     state: started
+- name: wait for LDAP to start
+  wait_for:
+    delay: 5
+    host: '{{ openldap_ip_addr }}'
+    port: 389
+    state: started
 
 - name: set LDAP admin password
   command: 'docker exec -i {{ openldap_container_name }} /docker-entrypoint.sh set_admin_pass {{ openldap_admin_password | quote }}'
