--- a/roles/bacula-restores/tasks/main.yml
+++ b/roles/bacula-restores/tasks/main.yml
@@ -1,26 +1,11 @@
 ---
 # tasks file for bacula-restores
 
-- name: List bacula storage
-  find:
-    paths: "{{bacula_storage}}"
-    file_type: file
-    recurse: yes
-  register: bacula_restores_list
-
-- name: Create bacula storage symlinks
-  file:
-    path: '{{ item.path | replace("{{bacula_storage}}","{{bacula_dest}}") | dirname }}'
-    state: directory
-    force: yes
-    mode: 0777
-  with_items: '{{ bacula_restores_list.files }}'
-
-- name: Create bacula storage directories
-  file:
-    src: '{{ item.path }}'
-    dest: '{{ item.path | replace("{{bacula_storage}}","{{bacula_dest}}") }}'
-    state: link
-    force: yes
-    mode: '{{ item.mode }}'
-  with_items: '{{ bacula_restores_list.files }}'
+- name: Synchronize bacula storage to restore directory
+  synchronize:
+    dest: "{{bacula_dest}}/" # required. Path on the destination host that will be synchronized from the source; The path can be absolute or relative.
+    src: "{{bacula_storage_path}}/" # required. Path on the source host that will be synchronized to the destination; The path can be absolute or relative.
+    delete: yes # not required. Delete files in C(dest) that don't exist (after transfer, not before) in the C(src) path. This option requires C(recursive=yes).
+    archive: yes # not required. Mirrors the rsync archive flag, enables recursive, links, perms, times, owner, group flags and -D.
+    link_dest: "{{bacula_storage_path}}/" # not required. add a destination to hard link against during the rsync.
+  delegate_to: "{{ inventory_hostname }}"
